@@ -1,0 +1,256 @@
+0,0,0
+0.0366039,0,0.0418275
+0.0732078,0,0.0836549
+0.109812,0,0.125482
+0.146416,0,0.16731
+0.18302,0,0.209137
+0.219624,0,0.250965
+0.256227,0,0.292792
+0.292831,0,0.33462
+0.329435,0,0.376447
+0.366039,0,0.418275
+0.402643,0,0.460102
+0.439247,0,0.501929
+0.468006,0,0.534608
+0.473229,0,0.539839
+0.478453,0,0.545071
+0.483676,0,0.550302
+0.4889,0,0.555533
+0.494124,0,0.560765
+0.499347,0,0.565996
+0.504571,0,0.571227
+0.509794,0,0.576459
+0.515018,0,0.58169
+0.520241,0,0.586922
+0.525465,0,0.592153
+0.530688,0,0.597384
+0.512386,0,0.602616
+0.470559,0,0.607847
+0.428731,0,0.613078
+0.386904,0,0.61831
+0.345076,0,0.623541
+0.303249,0,0.628773
+0.261422,0,0.634004
+0.219594,0,0.639235
+0.177767,0,0.644467
+0.135939,0,0.649698
+0.0941118,0,0.654929
+0.0522843,0,0.660161
+0.0104569,0,0.665392
+0,0,0.678465
+0,0,0.694151
+0,0,0.709837
+0,0,0.725524
+0,0,0.74121
+0,0,0.756896
+0,0,0.772582
+0,0,0.788269
+0,0,0.803955
+0,0,0.819641
+0,0,0.835327
+0,0,0.851014
+0,0,0.8667
+0,0.0366039,0.8667
+0,0.0732078,0.8667
+0,0.109812,0.8667
+0,0.146416,0.8667
+0,0.18302,0.8667
+0,0.219624,0.8667
+0,0.256227,0.8667
+0,0.292831,0.8667
+0,0.329435,0.8667
+0,0.366039,0.8667
+0,0.402643,0.8667
+0,0.439247,0.8667
+0,0.469314,0.8667
+0,0.479769,0.8667
+0,0.490224,0.8667
+0,0.500678,0.8667
+0,0.511133,0.8667
+0,0.521588,0.8667
+0,0.532043,0.8667
+0,0.542498,0.8667
+0,0.552953,0.8667
+0,0.563408,0.8667
+0,0.573863,0.8667
+0,0.584318,0.8667
+0,0.594773,0.8667
+0,0.602616,0.858857
+0,0.607847,0.843171
+0,0.613078,0.827484
+0,0.61831,0.811798
+0,0.623541,0.796112
+0,0.628773,0.780425
+0,0.634004,0.764739
+0,0.639235,0.749053
+0,0.644467,0.733367
+0,0.649698,0.71768
+0,0.654929,0.701994
+0,0.660161,0.686308
+0,0.665392,0.670622
+0,0.6667,0.658853
+0,0.6667,0.64839
+0,0.6667,0.637927
+0,0.6667,0.627465
+0,0.6667,0.617002
+0,0.6667,0.606539
+0,0.6667,0.596076
+0,0.6667,0.585614
+0,0.6667,0.575151
+0,0.6667,0.564688
+0,0.6667,0.554225
+0,0.6667,0.543763
+0,0.6667,0.5333
+0,0.661469,0.491473
+0,0.656237,0.449645
+0,0.651006,0.407818
+0,0.645775,0.36599
+0,0.640543,0.324163
+0,0.635312,0.282335
+0,0.63008,0.240508
+0,0.624849,0.19868
+0,0.619618,0.156853
+0,0.614386,0.115025
+0,0.609155,0.073198
+0,0.603924,0.0313706
+0,0.602614,0
+0,0.613069,0
+0,0.623524,0
+0,0.633978,0
+0,0.644433,0
+0,0.654888,0
+0,0.665343,0
+0,0.675798,0
+0,0.686253,0
+0,0.696708,0
+0,0.707163,0
+0,0.717618,0
+0,0.728073,0
+0,0.738531,0
+0,0.748994,0
+0,0.759457,0
+0,0.76992,0
+0,0.780382,0
+0,0.790845,0
+0,0.801308,0
+0,0.811771,0
+0,0.822233,0
+0,0.832696,0
+0,0.843159,0
+0,0.853622,0
+0,0.864084,0
+0,0.874541,0
+0,0.884996,0
+0,0.895451,0
+0,0.905906,0
+0,0.916361,0
+0,0.926816,0
+0,0.937271,0
+0,0.947725,0
+0,0.95818,0
+0,0.968635,0
+0,0.97909,0
+0,0.989545,0
+0,1,0
+0.0575137,1,0
+0.115027,1,0
+0.172541,1,0
+0.230055,1,0
+0.287569,1,0
+0.345082,1,0
+0.402596,1,0
+0.46011,1,0
+0.517624,1,0
+0.575137,1,0
+0.632651,1,0
+0.690165,1,0
+0.737222,0.998692,0
+0.752908,0.993461,0
+0.768594,0.988229,0
+0.78428,0.982998,0
+0.799967,0.977767,0
+0.815653,0.972535,0
+0.831339,0.967304,0
+0.847025,0.962073,0
+0.862712,0.956841,0
+0.878398,0.95161,0
+0.894084,0.946378,0
+0.909771,0.941147,0
+0.925457,0.935916,0
+0.935916,0.928073,0
+0.941147,0.917618,0
+0.946378,0.907163,0
+0.95161,0.896708,0
+0.956841,0.886253,0
+0.962073,0.875798,0
+0.967304,0.865343,0
+0.972535,0.854888,0
+0.977767,0.844433,0
+0.982998,0.833978,0
+0.988229,0.823524,0
+0.993461,0.813069,0
+0.998692,0.802614,0
+1,0.788235,0
+1,0.772549,0
+1,0.756863,0
+1,0.741176,0
+1,0.72549,0
+1,0.709804,0
+1,0.694118,0
+1,0.678431,0
+1,0.662745,0
+1,0.647059,0
+1,0.631373,0
+1,0.615686,0
+1,0.6,0
+1,0.552941,0
+1,0.505882,0
+1,0.458824,0
+1,0.411765,0
+1,0.364706,0
+1,0.317647,0
+1,0.270588,0
+1,0.223529,0
+1,0.176471,0
+1,0.129412,0
+1,0.0823529,0
+1,0.0352941,0
+0.997386,0,0
+0.986931,0,0
+0.976476,0,0
+0.966022,0,0
+0.955567,0,0
+0.945112,0,0
+0.934657,0,0
+0.924202,0,0
+0.913747,0,0
+0.903292,0,0
+0.892837,0,0
+0.882382,0,0
+0.871927,0,0
+0.864084,0,0
+0.858853,0,0
+0.853622,0,0
+0.84839,0,0
+0.843159,0,0
+0.837927,0,0
+0.832696,0,0
+0.827465,0,0
+0.822233,0,0
+0.817002,0,0
+0.811771,0,0
+0.806539,0,0
+0.801308,0,0
+0.8,0.0470588,0.0470588
+0.8,0.109804,0.109804
+0.8,0.172549,0.172549
+0.8,0.235294,0.235294
+0.8,0.298039,0.298039
+0.8,0.360784,0.360784
+0.8,0.423529,0.423529
+0.8,0.486275,0.486275
+0.8,0.54902,0.54902
+0.8,0.611765,0.611765
+0.8,0.67451,0.67451
+0.8,0.737255,0.737255
+0.8,0.8,0.8
